# mussia51

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  Tiltfile  justfile  nx.json  package.json  rust.Dockerfile
.cargo/: bacon.toml  config.toml  rustfmt.toml
.github/workflows/: ci.yml
apps/first-mcp/: README.md  package.json  project.json
apps/first-mcp/src/: index.ts
apps/playground/api/: Cargo.toml  Tiltfile  project.json
apps/playground/api/src/: main.rs
apps/todo-mcp/: Dockerfile  biome.json  project.json  tsconfig.app.json
apps/todo-mcp/src/: main.ts
apps/todo_api/: Cargo.toml  Tiltfile  project.json
apps/todo_api/k8s/base/: deployment.yml  kustomization.yml  network-policy.yaml  service-account.yaml  service.yml
apps/todo_api/migrations/: 0001_books_table.sql  0003_task.sql
apps/todo_api/queries/: query.sql
apps/todo_api/src/: main.rs
apps/todo_api/tests/: quick_dev.rs
libs/lib_utils/: Cargo.toml  project.json
libs/lib_utils/src/: envs.rs  lib.rs  tracing.rs
libs/services/: Cargo.toml  project.json
libs/services/src/: lib.rs
libs/services/src/mongo/: connector.rs  filter_and_options.rs  mod.rs  query_param_processing.rs  serialize.rs  service.rs
libs/services/src/postgres/: connector.rs  mod.rs  queries.rs  results.rs  service.rs
libs/services/src/redis/: acknowledge.rs  connector.rs  message.rs  mod.rs  push_response.rs  subscribe.rs  users.rs
manifests/dockers/app/: Taskfile.yml  compose.yaml  justfile
manifests/dockers/n8n/: .env  .env.example  compose.yaml
manifests/k8s/cluster/: cluster.yaml
manifests/k8s/dbs/: kustomization.yml  mongodb.yaml  postgres.yaml  redis.yaml
manifests/k8s/kustomize/base/: kustomization.yml
manifests/k8s/kustomize/base/common/base/: config-map.yaml  kustomization.yml
manifests/k8s/kustomize/base/playground-api/base/: deployment.yml  ingress.yaml  kustomization.yml  service-account.yaml  service.yml  test.yaml
manifests/k8s/kustomize/base/todo-api/base/: deployment.yml  scale.yaml  service.yml  (+1 more)
manifests/k8s/kustomize/overlays/prod/: hpa.yaml
(+1 files in other folders)
