
[workspace]
resolver = '2'
members = [
	'libs/lib_utils',
	'apps/todo_api',
]

[workspace.dependencies]
axum = { version = '0.8', features = ['default', 'tracing'] }
tokio = { version = '1.41', features = ['macros', 'signal', 'rt-multi-thread'] }
#tokio-stream = '0.1'
tracing-subscriber = { version = '0.3', features = ['env-filter', 'json', 'serde_json'] }
tracing = '0.1'

[workspace.lints.rust]
unsafe_code = 'forbid'

[profile.release]
opt-level = 'z'
codegen-units = 1
strip = true
lto = true
