
[workspace]
resolver = '2'
members = [
	'libs/lib_utils',
	'apps/todo_api',
	'libs/services',
	'libs/proc_macros',
	'libs/models',
	'libs/axum_utils',
	'apps/playground/api',
]

[workspace.dependencies]
lib_utils = { path = 'libs/lib_utils' }
axum = { version = '0.8', features = ['default', 'tracing'] }
eyre = { version = '0.6' }
serde = { version = '1.0', features = ['derive'] }
serde_json = { version = '1.0' }
tokio = { version = '1.41', features = ['macros', 'signal', 'rt-multi-thread'] }
tracing-subscriber = { version = '0.3', features = ['env-filter', 'json', 'serde_json'] }
tracing = '0.1'
validator = { version = '0.20', features = ['derive'] }
utoipa = { version = '5.3', features = ['uuid', 'macros'] }
utoipa-swagger-ui = { version = '9.0', features = ['axum'] }
utoipa-redoc = { version = '6.0', features = ['axum'] }
utoipa-rapidoc = { version = '6.0', features = ['axum'] }
utoipa-scalar = { version = '0.3', features = ['axum'] }
ts-rs = { version = '10.1', features = ['serde-compat'] }
mongodb = { version = '3.2', features = ['default'] }
redis = { version = '0.29', features = ['serde', 'serde_json', 'async-trait', 'aio', 'r2d2', 'tokio-comp'] }
sqlx = { version = '0.8', default-features = false, features = ['postgres', 'runtime-tokio-rustls', 'macros', 'uuid', 'chrono', 'migrate'] }

[workspace.lints.rust]
unsafe_code = 'forbid'

[profile.release]
opt-level = 'z'
codegen-units = 1
strip = true
lto = true
